# argsh

./: .dockerignore  .envrc  .gitignore  .vale.ini  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  REVIEW.md  SECURITY.md  argsh-so.min.tmpl  argsh.min.sh  argsh.min.tmpl  domains.md  package.json  teammates.md  template.md  turbo.json
.bin/: .gitignore  argsh  b.yaml  make  obfus  shdoc
.cache/: .gitignore
.claude/agents/: agent-registry.json  build-agent.md  review-agent.md  scout-agent.md  security-agent.md  templates
.claude/commands/: cuite-init.md  cuite-sync.md  do-quick.md  do-teams.md  do.md  improve.md
.claude/cuite/: CLAUDE.md  README.md  domain-map.conf  settings.json  settings.local.json  tuning.conf
.docker/: docker-entrypoint.sh  kcov.dockerfile
.docker/test/: entrypoint.bats  minify.bats
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs.yml
.github/workflows/: argsh.yaml  docs-test.yaml  docs.yaml  docs.yml  lsp-release.yml  lsp.yml  pages.yaml  release.yaml  test-argsh.yaml
agents/: review-agent.md
bench/: usage-depth.sh
bootstrap/: .envrc  install.sh
builtin/: Cargo.toml  README.md  build.rs  coverage.json
builtin/src/: args.rs  args_cmd.rs  field.rs  import.rs  is.rs  lib.rs  lib_cmd.rs  lib_push_cmd.rs  shared.rs  shell.rs  to.rs  usage.rs
builtin/src/oci/: auth.rs  client.rs  mod.rs
builtin/src/usage/: completion.rs  docgen.rs  mcp.rs  mod.rs
commands/: cuite-init.md
coverage/: .gitignore  argsh.json  coverage.json
crates/argsh-lsp/: Cargo.toml  coverage.json
crates/argsh-lsp/src/: backend.rs  codelens.rs  completion.rs  diagnostics.rs  format.rs  goto_def.rs  hover.rs  lib.rs  main.rs  preview.rs  rename.rs  resolver.rs  symbols.rs  util.rs
crates/argsh-lsp/tests/: dap_e2e.rs  dap_integration.rs  integration.rs  lint_cli.rs
docs/: about.md  clis-for-llms.mdx  docgen.mdx  environment-variables.mdx  getting-started.mdx  git-subtree.md  glossary.mdx  homepage.mdx  mcp-improvements.md  shell-completion.mdx  sidebars.js  troubleshooting.mdx
hooks/: detect-injection.sh  inject-expertise.sh  scope-enforcement.sh  validate-intent.sh
libraries/: args-builtin.bats  args.bats  args.sh  args.usage.sh  args.utils.sh  array.sh  bash.sh  binary.sh  docker.sh  error.sh  fmt.sh  github.sh  import.bats  import.sh  is.sh  main.bats  main.sh  string.bats  string.sh  to.sh  trace.sh  verbose.sh
minifier/: Cargo.toml  README.md  coverage.json
minifier/src/: bundle.rs  discover.rs  flatten.rs  join.rs  main.rs  obfuscate.rs  quote.rs  strip.rs
minifier/tests/: integration.rs
shdoc/: Cargo.toml  README.md  coverage.json
shdoc/src/: main.rs  model.rs  toc.rs
shdoc/src/parser/: bash.rs  merge.rs  mod.rs  rust.rs
shdoc/src/render/: html.rs  json.rs  markdown.rs  mod.rs
shdoc/tests/: integration.rs
shdoc/tests/fixtures/: args.expected.md  args.utils.expected.md  array.expected.md  bash.expected.md  bash.sh  binary.expected.md  docker.expected.md  docker.sh  error.expected.md  fmt.expected.md  github.expected.md  import.expected.md  is.expected.md  main.expected.md  string.expected.md  string.sh  to.expected.md
test/: helper.bash
todos/: dap-subshell-and-reverse.md  lsp-phase2.md
vscode-argsh/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
www/: README.md  package.json
(+206 files in other folders)
