[package]
name = "shdoc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "shdoc"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
anyhow = "1"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[profile.release]
lto = true
opt-level = "s"
strip = true
codegen-units = 1
