[package]
name = "argsh-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "argsh-lsp"

[dependencies]
argsh-syntax = { path = "../argsh-syntax" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
regex = "1"

[dev-dependencies]
serde_json = "1"
