[package]
name = "argsh-lsp"
version = "0.1.0"
edition = "2021"

# Library exposing diagnostic and resolver logic so it can be reused by
# standalone CLI binaries (e.g. argsh-lint) without duplicating code.
[lib]
name = "argsh_lsp"
path = "src/lib.rs"

[[bin]]
name = "argsh-lsp"
path = "src/main.rs"

# Standalone CLI linter that emits shellcheck-style diagnostics for CI/editor
# pipelines. Reuses the LSP analysis library.
[[bin]]
name = "argsh-lint"
path = "src/bin/argsh-lint.rs"

# Debug Adapter Protocol (DAP) server for step-through debugging of argsh
# scripts. Uses bash's DEBUG trap for breakpoints and stepping — no bashdb
# dependency required.
[[bin]]
name = "argsh-dap"
path = "src/bin/argsh-dap.rs"

[dependencies]
argsh-syntax = { path = "../argsh-syntax" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
regex = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
